<resources>
    <string name="app_name" translatable="false">CoffeeRobot</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="ip_field_label">IP address:</string>
    <string name="default_ip" translatable="false">192.168.0.2</string>
    <string name="ip_port_label">Port:</string>
    <string name="default_port" translatable="false">48569</string>
    <string name="connect_to">Connection timeout:</string>
    <string name="receive_to">Receive timeout:</string>
    <string name="default_timeout" translatable="false">5000</string>
    <string name="status_connected">CONNECTED</string>
    <string name="status_disconnected">DISCONNECTED</string>
    <string name="blank" translatable="false"> </string>
    <string name="send">Send</string>
    <string name="settings">Settings</string>
</resources>