<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:text="@string/receive_to"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/receiveToField"
        app:layout_constraintStart_toStartOf="@+id/receiveToField" />

    <EditText
        android:id="@+id/receiveToField"
        android:layout_width="310dp"
        android:layout_height="65dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/default_timeout"
        android:textAlignment="inherit"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/connectToField"
        app:layout_constraintTop_toBottomOf="@+id/connectToField"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/connectToField"
        android:layout_width="310dp"
        android:layout_height="65dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/default_timeout"
        android:textAlignment="inherit"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/ipField"
        app:layout_constraintTop_toBottomOf="@+id/ipField" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:text="@string/connect_to"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/connectToField"
        app:layout_constraintStart_toStartOf="@+id/connectToField" />

    <EditText
        android:id="@+id/portField"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/default_port"
        android:textAlignment="inherit"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/ipField"
        app:layout_constraintTop_toTopOf="@+id/ipField" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ip_port_label"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/portField"
        app:layout_constraintStart_toStartOf="@+id/portField" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ip_field_label"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/ipField"
        app:layout_constraintStart_toStartOf="@+id/ipField" />

    <EditText
        android:id="@+id/ipField"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/default_ip"
        android:textAlignment="inherit"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>